Fix margin on mobile breadcrumbs

--- a/src/components/Breadcrumbs/styles.module.css
+++ b/src/components/Breadcrumbs/styles.module.css
@@ -1,4 +1,4 @@
-.locBreadcrumb {
+.locBreadcrumb, .locBreadcrumbCaret {
   margin: 0 4px;
   color: #414141;
 }
